fix spacing

--- a/src/components/GameContainer/GameContainer.module.css
+++ b/src/components/GameContainer/GameContainer.module.css
@@ -11,11 +11,11 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-
+    font-size: 35px;
 } 
 
 .loading {
     color: var(--sub-color);
-    font-size: 34px;
+    font-size: 35px;
     align-self: center;
 }
