--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,8 @@
 html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  max-height: 100vh;
 }
 
 
@@ -22,7 +24,8 @@ html, body {
 }
 
 #root {
-  height: 100vh;
+  height: 100%;
+
   font-size: 25px;
   background-color: var(--bg-color);
 
